// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagsList should render empty 1`] = `
<div
  data-mock="Layout"
  data-title="Tags List | undefined"
>
  <h1>
    Tags List
  </h1>
</div>
`;

exports[`TagsList should render with data 1`] = `
<div
  data-description="Some description"
  data-metaTitle="Test title"
  data-mock="Layout"
  data-title="Tags List | Test title"
>
  <h1>
    Tags List
  </h1>
  <div
    data-mock="Link"
  >
    {
  "to": "/tags/tag1",
  "className": "TagsList__TagLink-sc-2p4wkd-0 jInolM"
}
    tag1
    <sup>
       
      10
    </sup>
  </div>
  <div
    data-mock="Link"
  >
    {
  "to": "/tags/tag2",
  "className": "TagsList__TagLink-sc-2p4wkd-0 jInolM"
}
    tag2
    <sup>
       
      10
    </sup>
  </div>
</div>
`;
